fix footer overflow problem

--- a/_sass/_skew.scss
+++ b/_sass/_skew.scss
@@ -28,20 +28,29 @@
   }
 }
 
-.footer-segment-crop {
-  margin-top: -8%;
-  padding-top: 2%;
-  overflow-y: hidden;
-}
-
 .footer-segment-wrapper {
-  transform: skew(0,2deg);
+  margin-top: -6%;
   position: relative;
-  margin-top: -1px;
-  margin-bottom: -2%;
-  padding-bottom: 2%;
 
-  > .segment {
-    transform: skew(0,-2deg);
+  &:before, &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: -1;
+  }
+
+  &:before {
+    top: 0;
+    height: 0;
+    padding-bottom: 4%;
+    transform: skew(0,2deg);
+  }
+
+  &:after {
+    top: 0;
+    bottom: 0;
+    margin-top: 2%;
   }
 }
